kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
	name: app-gitops-demo
	labels:
		app.kubernetes.io/name: gitops-demo
		app.kubernetes.io/part-of: argo-demo
