kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo
  namespace: app-gitops-demo
  labels:
    app.kubernetes.io/name: gitops-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gitops-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
