kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-demo
  namespace: app-gitops-demo
  labels:
    app.kubernetes.io/name: gitops-demo
spec:
  ingressClassName: nginx
  rules:
    - host: gitops-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitops-demo
                port:
                  number: 80
